--- a/styleMy.css
+++ b/styleMy.css
@@ -23,6 +23,7 @@ h1{
 table{
     border-collapse: collapse;
     border: 2px solid black;
+    background-color: white;
 }
 table .titulo th{
     background-color: rgb(25, 37, 61);
