--- a/styleMy.css
+++ b/styleMy.css
@@ -19,6 +19,7 @@ h1{
 #classifica{
     font-size: 20px;
     color: rgb(231, 14, 14);
+    text-align: center;
 }
 table{
     border-collapse: collapse;
@@ -65,7 +66,7 @@ input[type=number] {
     border-radius: 10px;
     
 }
-input[type=button]{
+input[type=submit]{
     background-color: #4CAF50;
     border: 2px groove #337235 ;
     color: white;
