--- a/styleMy.css
+++ b/styleMy.css
@@ -1,5 +1,5 @@
 body{
-    scroll-behavior: smooth;
+    /*scroll-behavior: smooth; */
     display: flex;
     flex-direction: column;
     justify-content: center;
